# SentiNet

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  Todo.todo  cmake_functions  index.md  script
cpp/: CMakeLists.txt  README.md  cpp.cmake
cpp/common/: CMakeLists.txt
cpp/common/include/: defaults.hpp
cpp/common/include/callbacks/: callbacks.hpp
cpp/common/include/controllers/: RobotController.hpp
cpp/common/include/grl/: TODO
cpp/common/include/networking/: defaults.hpp
cpp/common/scratch/: ActionObjective.cpp  TriggerHandler.cpp
cpp/common/src/: ActionProcess.cpp  ClientInterface.cpp  ZMQClient.cpp  ZMQServer.cpp
cpp/common/src/client/: ZMQClient.cpp
cpp/common/src/server/: ServerInterface.cpp  ZMQServer.cpp  ZMQServer.cpp.old
cpp/config/: IIRFConfig.h  IIRFConfig.h.in
cpp/framework/: CMakeLists.txt
cpp/framework/include/: defaults.hpp
cpp/framework/include/networking/: zhelpers.hpp
cpp/framework/scratch/rks-old/: ObjectiveHandler.cpp  TriggerHandler.cpp  Types.cpp
cpp/framework/src/bridge/: NetworkBridgeAdapter.cpp
cpp/framework/src/broker/: BrokerInterface.cpp  ZMQBroker.cpp
cpp/framework/src/client/: ClientInterface.cpp  ZMQClient.cpp
cpp/framework/src/curl/: Curlloader.cpp
cpp/framework/src/server/: ServerInterface.cpp  ZMQServer.cpp
cpp/impl/: CMakeLists.txt  Makefile  cmake_install.cmake
cpp/impl/run-tests/: ActionObjectiveTest.cpp  Clienttest.cpp  Servertest.cpp
cpp/include/: Loader.cpp
cpp/include/control/: NetworkPatterns.hpp  RandomPublisher.hpp  SimpleBroker.hpp  WiiController.hpp  ZMQControlClient.hpp
cpp/include/core/control/: ControlBaseInterface.hpp  ControlClientInterface.hpp  UploaderInterface.hpp
cpp/include/core/kernel/: InputOutputInterface.hpp
cpp/include/core/messages/: MessageInterface.hpp
cpp/include/core/utils/: file_system.hpp  logging.hpp  strings.hpp  system_config.temp
cpp/include/curlcpp/: README.md  cookie.h  cookie_date.h  cookie_datetime.h  cookie_time.h  curl_config.h  curl_cookie.h  curl_easy.h  curl_easy_info.h  curl_exception.h  curl_form.h  curl_global.h  curl_header.h  curl_info.h  curl_interface.h  curl_ios.h  curl_multi.h  curl_option.h  curl_pair.h  curl_receiver.h  curl_sender.h  curl_share.h  curl_utility.h
cpp/include/framework/: defaults.hpp
cpp/include/framework/control/: ControlBaseInterface.hpp  ControlClientInterface.hpp
cpp/include/framework/endpoints/: ServerInterface.hpp  UploaderInterface.hpp
cpp/include/framework/loader/: ServerInterface.hpp  UploaderInterface.hpp
cpp/include/framework/networking/: ClientInterface.hpp
cpp/include/framework/utils/: CMakeLists.txt  file_system.hpp  functional.hpp  logging.hpp  main.cpp  random.hpp  strings.hpp  system_config.hpp  utils.cpp  utils.hpp
cpp/include/kernel/: Bluetooth.hpp  KermitKernel.hpp  SerialPort.hpp  Socket.hpp
cpp/include/kernelOPS/core/: ActionProcess.hpp  Types.hpp
cpp/include/messages/: temp
cpp/include/messages/common/: CmdVel.hpp
cpp/include/messages/debug/: DebugMessage.h
cpp/include/messages/factory/: MessageFactory.hpp
cpp/include/messages/pipe/: ZMQMessagePipe.hpp  ZMQProxy.hpp
cpp/include/messages/telemetry/: Telemetry.hpp
cpp/include/networking/curl/: CurlClient.hpp  CurlServer.hpp  CurlUploader.hpp
cpp/include/networking/zmq/: ZMQControlClient.hpp  ZMQControlClient2.hpp  ZMQPublisher.hpp  ZMQSubscriber.hpp  zhelpers.hpp
cpp/include/proto/common/: cmd_vel.pb.cc  cmd_vel.pb.h
cpp/include/proto/debug/: debug.pb.cc  debug.pb.h  other.pb.cc  other.pb.h
cpp/include/proto/telemetry/: telemetry.pb.cc  telemetry.pb.h
cpp/include/proto/test/: test.pb.cc  test.pb.h
cpp/include/wii_controller/: WiiController.hpp
cpp/lib/: CMakeLists.txt  Types.cpp
cpp/models/: CMakeLists.txt
cpp/protoc/: CMakeLists.txt  a.out  main.cpp
cpp/protoc/include/: Linear.pb.h  drivetrain.pb.h  thing.pb.h
cpp/protoc/proto/: drivetrain.proto  thing.proto
cpp/protoc/src/: Linear.pb.cc  drivetrain.pb.cc  thing.pb.cc
cpp/scratch/grl-old/grl/: rks.hpp
cpp/scratch/grl/message_proxy/: MessageProxyInterface.hpp
cpp/scratch/grl/process_controller/: ProcessControllerInterface.hpp
cpp/scratch/rks-old/: ActionObjective.cpp  ActionProcess.cpp
cpp/scratch/virtualnetwork/: macros.hpp
cpp/scratch/virtualnetwork/core/: ActionObjective.hpp  ActionProcess.hpp  ObjectiveHandler.hpp  ProcessMain.hpp  TriggerHandler.hpp
cpp/scratch/virtualnetwork/utils/: Types.hpp
cpp/src/control/: NetworkPatterns.cpp  RandomPublisher.cpp  WiiController.cpp  ZMQControlClient.cpp
cpp/src/core/utils/: file_system.cpp
cpp/src/impl/: all_in_one.cpp  example.cpp  main.cpp  main2.cpp  publisher.cpp  subscriber.cpp
cpp/src/impl/examples/: all_in_one.cpp  all_in_one_type_two.cpp  client.cpp  curl.cpp  kermit.cpp  main_1.cpp  main_2.cpp  proxy.cpp  server.cpp
cpp/src/impl/kernel_examples/: serial_example.cpp
cpp/src/kernel/: KermitKernel.cpp  SerialPort.cpp
cpp/src/libs/curlcpp/: cookie.cpp  cookie_date.cpp  cookie_datetime.cpp  cookie_time.cpp  curl_cookie.cpp  curl_easy.cpp  curl_exception.cpp  curl_form.cpp  curl_global.cpp  curl_header.cpp  curl_info.cpp  curl_multi.cpp  curl_share.cpp
cpp/src/libs/messages/: DebugMessage.cpp
cpp/src/libs/networking/: CurlUploader.cpp  ZMQControlClient.cpp  ZMQPublisher.cpp  ZMQSubscriber.cpp  ZMQSubscriber.temp
cpp/src/libs/uploader/: CurlUploader.cpp
cpp/src/libs/wii_controller/: WiiController.cpp
cpp/src/messages/: DebugMessage.cpp  DriveTrain.cpp  MessageFactory.cpp  Telemetry.cpp
cpp/tests/: CMakeLists-gtest.txt  CMakeLists.txt  README
cpp/tests/functional_test/: CMakeLists.txt  main.cpp
cpp/tests/functional_test/messages/: CommonTest.cpp  KelvinTest.cpp  RawTest.cpp
cpp/tests/include/: TestUtils.hpp
cpp/tests/run-tests/: ActionObjectiveTest.cpp  ActionObjectiveTriggerTest.cpp  ActionTriggerTest.cpp  Clienttest.cpp  CurlTest.cpp  ObjectiveHandlerTest.cpp  Servertest.cpp
cpp/tests/unit-tests/: Clienttest.cpp  ObjectiveHandlerTest.cpp  Servertest.cpp
cpp/tests/unit_test/: CMakeLists.txt  MinimumTest.sample  main.cpp
src/: log.c  (+6 more)
(+314 files in other folders)
